cmake_minimum_required(VERSION 3.22)
project(pktbuilder)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
add_subdirectory(src)
if (WIN32)
    target_link_libraries(pktbuilder iphlpapi)
endif()
include(CTest)
if (BUILD_TESTING)
    add_subdirectory(tests)
endif()
