cmake_minimum_required(VERSION 3.22)
include(CTest)
link_libraries(pktbuilder)
add_executable(ipv4AddrToStr ipv4AddrToStr.cpp)
add_executable(strToIpv4Addr strToIpv4Addr.cpp)
add_executable(ipv4AddrToInt ipv4AddrToInt.cpp)
add_executable(intToIpv4Addr intToIpv4Addr.cpp)
add_executable(formatDomainName formatDomainName.cpp)
add_test(NAME ipv4AddrToStr COMMAND ipv4AddrToStr)
add_test(NAME strToIpv4Addr COMMAND strToIpv4Addr)
add_test(NAME intToIpv4Addr COMMAND intToIpv4Addr)
add_test(NAME ipv4AddrToInt COMMAND ipv4AddrToInt)
add_test(NAME formatDomainName COMMAND formatDomainName)